--- a/src/components/Home/Footer/style.css
+++ b/src/components/Home/Footer/style.css
@@ -53,3 +53,14 @@ footer{
 
 
 .copyright p span{color:#000; cursor:pointer}
+
+@media screen and(max-width:576px) {
+    footer{
+        bottom: 0;
+    }
+    .footer-content{
+        display: flex;
+        flex-direction: column;
+    }
+    
+}
