--- a/src/components/Home/MenuItems/style.css
+++ b/src/components/Home/MenuItems/style.css
@@ -43,3 +43,15 @@ nav ul li:hover::after{
     transform-origin: bottom left;
 }
 
+@media screen and (max-width:576px)
+{
+    nav{
+        position: absolute;
+        top: 45rem;
+        height: 100vh;
+    }
+
+    nav ul{
+        margin:0 1rem 0 1rem;
+    }   
+}
