--- a/src/components/Home/ResultsList/style.css
+++ b/src/components/Home/ResultsList/style.css
@@ -1,14 +1,35 @@
 .resultList-container {
-    margin: 0 auto 3.5rem auto;
+    margin: 2rem auto 3.5rem auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    gap: 1.5rem;
   }
   
+  .resultList-heading{
+    margin-top: 5rem;
+    text-align: center;
+    font-size: 2.5rem;
+    text-transform: uppercase;
+  }
   .resultList-container img {
     width: 100%;
     height: 100%;
-    margin: 1rem;
     object-fit: cover;
+  }
+
+  .images-container{
+    margin: 1rem 0 2.5rem 0;
+  }
+
+  .images-likes{
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .images-icons{
+    cursor: pointer;
+    display: flex;
+    justify-content: space-around;
   }
 
 
