--- a/src/components/Home/Footer/style.css
+++ b/src/components/Home/Footer/style.css
@@ -54,13 +54,12 @@ footer{
 
 .copyright p span{color:#000; cursor:pointer}
 
-@media screen and(max-width:576px) {
-    footer{
-        bottom: 0;
-    }
+@media screen and (max-width:480px) {
     .footer-content{
         display: flex;
         flex-direction: column;
     }
-    
+    .copyright{
+        padding: 1rem;
+    }
 }
