--- a/src/components/Home/ResultsList/style.css
+++ b/src/components/Home/ResultsList/style.css
@@ -3,6 +3,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 1.5rem;
+    padding: 0 0.5rem;
   }
   
   .resultList-heading{
@@ -15,6 +16,8 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 10px;
+    cursor: pointer;
   }
 
   .images-container{
@@ -27,15 +30,19 @@
   }
 
   .images-icons{
-    cursor: pointer;
     display: flex;
     justify-content: space-around;
   }
 
+  .images-icons span{
+    cursor: pointer;
+  }
+
 
   /* MEDIA QUERIES */
-  @media (max-width: 576px) {
+  @media (max-width: 480px) {
     .resultList-container {
       grid-template-columns: 1fr;
+      padding: 0 0.5rem;
     }
   }
