--- a/src/components/Home/ResultsList/style.css
+++ b/src/components/Home/ResultsList/style.css
@@ -29,15 +29,65 @@
     justify-content: space-around;
   }
 
-  .images-icons{
+  .image-details{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
   }
 
-  .images-icons span{
+  .image-details span{
     cursor: pointer;
   }
 
+
+  .modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .modal-content {
+    background-color: #fff;
+    padding: 20px;
+    max-width: 600px;
+    text-align: center;
+    max-height: 80vh;
+    overflow-y: auto;
+  }
+  
+  .modal-content img {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+  }
+  
+  .image-details {
+    margin-bottom: 10px;
+  }
+  
+  .close-modal-btn {
+    background-color: #f44336;
+    color: #fff;
+    border: none;
+    padding: 8px 16px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+  
+  .close-modal-btn:hover {
+    background-color: #d32f2f;
+  }
+  
+  .close-modal-btn:focus {
+    outline: none;
+  }
+
+  
 
   /* MEDIA QUERIES */
   @media (max-width: 480px) {
